Bug 175620 - KPluginSelector does full update() on every mouse move
Summary: KPluginSelector does full update() on every mouse move
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 4.1
Platform: Compiled Sources Unspecified
: NOR normal
Target Milestone: ---
Assignee: Rafael Fernández López
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-11-19 22:05 UTC by Christoph Feck
Modified: 2008-12-23 23:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Feck 2008-11-19 22:05:29 UTC
Version:            (using Devel)
Installed from:    Compiled sources

Steps to reproduce:

- enable Paint Region visualization plugin in Kwin
- move mouse over plugin selector

The widget does a full redraw on every mouse move. It should update only the affected region when the hovered element changes.
Comment 1 Christoph Feck 2008-11-19 22:06:55 UTC
Assigned per request.
Comment 2 Rafael Fernández López 2008-12-23 23:48:40 UTC
SVN commit 900899 by ereslibre:

This updates are useless now that we have a different drawing approach.

BUG: 175620


 M  +0 -8      kwidgetitemdelegate.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=900899