This updates are useless now that we have a different drawing approach.

BUG: 175620

svn path=/trunk/KDE/kdelibs/; revision=900899